--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@felte/validator-yup": "^1.0.1",
+    "felte": "^1.0.1",
+    "yup": "^0.32.11"
+  }
 }
