--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"@domain": ["./src/domain/*"],
-			"@components": ["./src/components/*"],
-			"@store": ["./src/store/*"],
-			"@routes": ["./src/routes/*"],
-			"@utils": ["./src/utils/*"]
+			"@domain/*": ["./src/domain/*"],
+			"@components/*": ["./src/components/*"],
+			"@store/*": ["./src/store/*"],
+			"@routes/*": ["./src/routes/*"],
+			"@utils/*": ["./src/utils/*"]
 		}
 	}
 }
